# recall

./: .gitignore  LICENSE  README.md  mcp_server.py  pyproject.toml  recall.py  test_mcp_server.py  test_recall.py
.codebase-memory/: adr.md
.github/workflows/: test.yml
recall_search.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
